kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecsdemo-frontend
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ecsdemo-frontend
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 3000
